--- a/index.html
+++ b/index.html
@@ -49,5 +49,19 @@
             </div>
         </div>
     </header>
+
+
+    <main>
+        <section class="hero" aria-label="hero section">
+            <div class="container">
+                <div class="hero__content">
+                    <h1 class="hero__title"> Be aware, Manage well</h1>
+                    <p class="hero__description" aria-label="main description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam quis quia praesentium. Accusantium, aspernatur ad!</p>
+                    <button type="button" class="btn">Find Your Way</button>
+
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
